fix: wrong width in footer

--- a/style.less
+++ b/style.less
@@ -130,7 +130,7 @@ body.has-admin-bar #titleBar, body.has-admin-bar #titleBarinPost, body.has-admin
 .has-admin-bar .mdui-drawer {
     padding-top: 32px;
 }
-.mdx-side-title > button.mdui-btn-icon {
+.has-admin-bar .mdx-side-title > button.mdui-btn-icon {
     margin-top: 32px;
 }
 .theFirstPage {
@@ -423,6 +423,9 @@ body.mdui-theme-layout-dark .ct1-p {
     max-width: 700px;
     margin: 0 auto;
     text-align: left;
+}
+.mdx-wide-post-list .main .mdx-clean-footer, .mdx-wide-post-list .main-in-other .mdx-clean-footer {
+    max-width: 1200px;
 }
 .PostMain .mdx-clean-footer {
     width: 57%;
